[package]
name = "server-discover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.13"
serde_json = "1.0.87"
mongodb = "2.3.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3.25"
dotenv = "0.15.0"
craftping = { version = "0.3.1", features = ["async-tokio"] }
nix = "0.25.0"
slice-of-array = "0.3.2"
base64 = "0.13.1"